--- a/src/main/resources/templates/serviceprovider-dashboard.html
+++ b/src/main/resources/templates/serviceprovider-dashboard.html
@@ -46,13 +46,10 @@
 
         <!-- Page Heading -->
         <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 mb-0 text-gray-800">Service Provider Dashboard</h1>
+            <h1 class="h3 mb-0 text-gray-800" th:text="'Welcome ' + ${serviceProvider.firstName} + '!'"></h1>
         </div>
-
         <div class="row">
-            <div class="col-md-4">
-
-                <div class="col-xl-12 col-md-6 mb-4">
+                <div class="col-xl-3 col-md-6 mb-4">
                     <div class="card border-left-primary shadow h-100 py-2">
                         <div class="card-body">
                             <div class="row no-gutters align-items-center">
@@ -70,7 +67,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-12 col-md-6 mb-4">
+                <div class="col-xl-3 col-md-6 mb-4">
                     <div class="card border-left-secondary shadow h-100 py-2">
                         <a th:href="@{/serviceProvider/tasks/pending-tasks}">
                         <div class="card-body">
@@ -90,7 +87,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-12 col-md-6 mb-4">
+                <div class="col-xl-3 col-md-6 mb-4">
                     <div class="card border-left-warning shadow h-100 py-2">
                         <a th:href="@{/serviceProvider/tasks/ongoing-tasks}">
                         <div class="card-body">
@@ -114,7 +111,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-12 col-md-6 mb-4">
+                <div class="col-xl-3 col-md-6 mb-4">
                     <div class="card border-left-success shadow h-100 py-2">
                         <a th:href="@{/serviceProvider/tasks/completed-tasks}">
                         <div class="card-body">
@@ -138,7 +135,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-12 col-md-6 mb-4">
+                <div class="col-xl-5 col-md-6 mb-4">
                     <div class="card border-left-info shadow h-100 py-2">
                         <div class="card-body">
                             <div class="row no-gutters align-items-center">
@@ -156,10 +153,9 @@
                     </div>
                 </div>
 
-            </div>
 
 
-            <div class="col-md-7">
+            <div class="col-xl-7 col-md-6 mb-4">
                 <div class="card border-left-warning shadow h-100 py-2">
                     <div class="col-xl-12 col-md-6 mb-4">
                         <div class="card">
