--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -12,6 +12,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link rel="icon" th:href="@{/assets/img/favicon.ico}" type="image/x-icon">
+
     <!-- Custom fonts for this template-->
     <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
     <link
