--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -10,6 +10,8 @@
 
     <title>Forbidden - 403</title>
 
+    <link rel="icon" th:href="@{/assets/img/favicon.ico}" type="image/x-icon">
+
     <!-- Custom fonts for this template-->
     <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
