--- a/src/main/resources/templates/register-serviceprovider.html
+++ b/src/main/resources/templates/register-serviceprovider.html
@@ -11,6 +11,8 @@
 
   <title>Errand Service Provider Registration</title>
 
+  <link rel="icon" th:href="@{/assets/img/favicon.ico}" type="image/x-icon">
+
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link
