--- a/src/main/resources/templates/serviceprovider-my-task-list.html
+++ b/src/main/resources/templates/serviceprovider-my-task-list.html
@@ -95,54 +95,54 @@
                                     </a>
                                 </td>
                                 <td style="text-align: center; white-space: nowrap;">
-                                    <a data-toggle="modal" data-target="#Modal"
-                                       title="Rate Service Provider"
+                                    <a th:href="@{/serviceProvider/tasks/{taskId}/rate(taskId=${task.id})}"
+                                       title="Rate Client"
                                        class="btn btn-info btn-circle btn-sm"
-                                       th:classappend="${(task.status == 'COMPLETED' && (task.rating == null || ( task.rating!= null && task.rating.clientRating == '0.0'))) ? '' : 'disabled'}">
+                                       th:classappend="${task.status == 'COMPLETED' && (task.rating == null || (task.rating != null && task.rating.clientRating == 0) )? '' : 'disabled'}">
                                         <i class="fas fa-star"></i>
                                     </a>
 
-                                    <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                        <div class="modal-dialog" role="document">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h5 class="modal-title" id="exampleModalLabel">Rate your Client</h5>
-                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                        <span aria-hidden="true">&times;</span>
-                                                    </button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <form class="rating" th:action="@{/serviceProvider/tasks/{taskId}/rate(taskId=${task.id})}"  th:object="${rating}" method="post">
-                                                        <div class="form-group">
+<!--                                    <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
+<!--                                        <div class="modal-dialog" role="document">-->
+<!--                                            <div class="modal-content">-->
+<!--                                                <div class="modal-header">-->
+<!--                                                    <h5 class="modal-title" id="exampleModalLabel">Rate your Client</h5>-->
+<!--                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+<!--                                                        <span aria-hidden="true">&times;</span>-->
+<!--                                                    </button>-->
+<!--                                                </div>-->
+<!--                                                <div class="modal-body">-->
+<!--                                                    <form class="rating" th:action="@{/serviceProvider/tasks/{taskId}/rate(taskId=${task.id})}"  th:object="${rating}" method="post">-->
+<!--                                                        <div class="form-group">-->
 
-                                                                <label for="rating" style="text-align: left;">Rate your Client:</label>
-                                                                <input type="number"
-                                                                       class="form-control"
-                                                                       id="rating"
-                                                                       placeholder="0-5"
-                                                                       min="0" max="5"
-                                                                       th:field="*{clientRating}"
-                                                                       required="required">
+<!--                                                                <label for="rating" style="text-align: left;">Rate your Client:</label>-->
+<!--                                                                <input type="number"-->
+<!--                                                                       class="form-control"-->
+<!--                                                                       id="rating"-->
+<!--                                                                       placeholder="0-5"-->
+<!--                                                                       min="0" max="5"-->
+<!--                                                                       th:field="*{clientRating}"-->
+<!--                                                                       required="required">-->
 
-                                                        </div>
-                                                        <div class="form-group">
-                                                            <div class="col-sm-12">
-                                                                <label>Rating Description:</label>
-                                                                <textarea type="text"
-                                                                          class="form-control custom-textarea"
-                                                                          th:field="*{clientRatingDescription}"
-                                                                          required="required"></textarea>
-                                                            </div>
-                                                        </div>
-                                                        <button type="submit" class="btn btn-primary btn-user btn-block">
-                                                            Submit Rating
-                                                        </button>
-                                                    </form>
-                                                </div>
+<!--                                                        </div>-->
+<!--                                                        <div class="form-group">-->
+<!--                                                            <div class="col-sm-12">-->
+<!--                                                                <label>Rating Description:</label>-->
+<!--                                                                <textarea type="text"-->
+<!--                                                                          class="form-control custom-textarea"-->
+<!--                                                                          th:field="*{clientRatingDescription}"-->
+<!--                                                                          required="required"></textarea>-->
+<!--                                                            </div>-->
+<!--                                                        </div>-->
+<!--                                                        <button type="submit" class="btn btn-primary btn-user btn-block">-->
+<!--                                                            Submit Rating-->
+<!--                                                        </button>-->
+<!--                                                    </form>-->
+<!--                                                </div>-->
 
-                                            </div>
-                                        </div>
-                                    </div>
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
 
 
                                 </td>
