--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -106,8 +106,8 @@
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div layout:fragment="profile-name"></div>
 
-                            <img class="img-profile rounded-circle"
-                                 src="/assets/img/undraw_profile_2.svg">
+<!--                            <img class="img-profile rounded-circle"-->
+<!--                                 src="/assets/img/undraw_profile_2.svg">-->
                         </a>
                         <!-- Dropdown - User Information -->
                         <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
