--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -10,6 +10,8 @@
 
     <div layout:fragment="profile-name">
         <span class="mr-2 d-none d-lg-inline text-gray-600 small" th:text="${user.username + ' (Administrator)'}"></span>
+        <img class="img-profile rounded-circle"
+             src="/assets/img/undraw_profile_2.svg">
     </div>
 
     <section layout:fragment="sidebar-item" class="py-2">
