--- a/src/main/resources/templates/admin-serviceproviders-ratings.html
+++ b/src/main/resources/templates/admin-serviceproviders-ratings.html
@@ -13,6 +13,8 @@
 
 <div layout:fragment="profile-name">
     <span class="mr-2 d-none d-lg-inline text-gray-600 small" th:text="${user.username + ' ' + ' (Administrator)'}"></span>
+    <img class="img-profile rounded-circle"
+         src="/assets/img/undraw_profile_2.svg">
 </div>
 
 <div layout:fragment="view-profile">
