--- a/src/main/resources/templates/rating-from-client.html
+++ b/src/main/resources/templates/rating-from-client.html
@@ -10,6 +10,15 @@
 
 <div layout:fragment="profile-name">
     <span class="mr-2 d-none d-lg-inline text-gray-600 small" th:text="${client.firstName + ' ' + client.lastName + ' (Client)'}"></span>
+    <img class="img-profile rounded-circle"
+         th:if="${client.profileImageFileName != null and not #strings.isEmpty(client.profileImageFileName)}"
+         th:src="'/assets/profile-images/' + ${client.profileImageFileName}"
+         alt="Profile Image">
+
+    <img class="img-profile rounded-circle"
+         th:if="${client.profileImageFileName == null or #strings.isEmpty(client.profileImageFileName)}"
+         src="/assets/img/undraw_profile.svg"
+         alt="Default Image">
 </div>
 
 <div layout:fragment="view-profile">
@@ -65,7 +74,7 @@
 
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">Edit Task Request</h6>
+                <h6 class="m-0 font-weight-bold text-primary">Rate Service Provider</h6>
             </div>
             <div class="card-body">
 
