Added profile in service provider dropdown

--- a/src/main/resources/templates/serviceprovider-my-task-list.html
+++ b/src/main/resources/templates/serviceprovider-my-task-list.html
@@ -26,6 +26,13 @@
          alt="Default Image">
 </div>
 
+<div layout:fragment="view-profile">
+    <a class="dropdown-item" href="/serviceProvider/profile">
+        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+        Profile
+    </a>
+</div>
+
 
 <!-- Sidebar Navigation -->
 <section layout:fragment="sidebar-item" class="py-2">
