--- a/src/main/resources/templates/serviceprovider-ratings.html
+++ b/src/main/resources/templates/serviceprovider-ratings.html
@@ -23,7 +23,7 @@
 </div>
 
 <div layout:fragment="view-profile">
-    <a class="dropdown-item" href="/client/profile">
+    <a class="dropdown-item" href="/serviceProvider/profile">
         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
         Profile
     </a>
