--- a/src/main/resources/templates/rating-from-serviceprovider.html
+++ b/src/main/resources/templates/rating-from-serviceprovider.html
@@ -23,7 +23,7 @@
 </div>
 
 <div layout:fragment="view-profile">
-    <a class="dropdown-item" href="/client/profile">
+    <a class="dropdown-item" href="/serviceProvider/profile">
         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
         Profile
     </a>
@@ -66,11 +66,12 @@
 
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">Edit Task Request</h6>
+                <h6 class="m-0 font-weight-bold text-primary">Rate your Client</h6>
             </div>
             <div class="card-body">
 
                 <form class="rating" th:action="@{/serviceProvider/tasks/{taskId}/rate(taskId=${task.id})}"  th:object="${rating}" method="post">
+
                     <div class="form-group">
 
                         <label for="rating" style="text-align: left;">Rate your Client:</label>
@@ -84,13 +85,13 @@
 
                     </div>
                     <div class="form-group">
-                        <div class="col-sm-12">
+
                             <label>Rating Description:</label>
                             <textarea type="text"
                                       class="form-control custom-textarea"
                                       th:field="*{clientRatingDescription}"
                                       required="required"></textarea>
-                        </div>
+
                     </div>
                     <button type="submit" class="btn btn-primary btn-user btn-block">
                         Submit Rating
