--- a/src/main/resources/templates/serviceprovider-profile-edit.html
+++ b/src/main/resources/templates/serviceprovider-profile-edit.html
@@ -20,6 +20,13 @@
          alt="Default Image">
 </div>
 
+<div layout:fragment="view-profile">
+    <a class="dropdown-item" href="/serviceProvider/profile">
+        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+        Profile
+    </a>
+</div>
+
 
 <!-- Sidebar Navigation -->
 <section layout:fragment="sidebar-item" class="py-2">
@@ -163,10 +170,8 @@
 
 
                             </div>
-                            <div class="d-flex justify-content-end">
-                                <button type="reset" class="btn btn-secondary mx-2 flex-fill">Clear</button>
-                                <button type="submit" class="btn btn-primary mx-2 flex-fill">Save</button>
-                            </div>
+
+                            <button class="btn btn-primary" type="submit">Save changes</button>
 
                         </form>
 
