--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -107,7 +107,7 @@
                         <!-- Collapsable Card Example -->
                         <div class="card border-left-danger shadow mt-4 mb-4">
                             <div class="card-header py-3">
-                                <h6 class="m-0 font-weight-bold text-primary">Completed Tasks</h6>
+                                <h6 class="m-0 font-weight-bold text-primary">Cancelled Tasks</h6>
                             </div>
                             <!-- Card Content - Collapse -->
                             <div class="collapse show">
