--- a/src/main/resources/templates/serviceprovider-tasks-list.html
+++ b/src/main/resources/templates/serviceprovider-tasks-list.html
@@ -75,7 +75,7 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-bordered" id="tasksTable" STYLE="width='100%'; cellspacing='0'" >
+                    <table class="table table-bordered" id="tasksTable" STYLE="width='100%'; cellspacing='0'">
                         <thead>
                         <tr>
                             <th>Task ID</th>
@@ -86,6 +86,7 @@
                             <th>Target Date</th>
                             <th>Location</th>
                             <th>Status</th>
+                            <th>Labels</th>
                             <th>Action</th>
                         </tr>
                         </thead>
@@ -99,6 +100,14 @@
                             <td th:text="${task.targetDate}"></td>
                             <td th:text="${task.street+', '+task.city+', '+task.postalCode}"></td>
                             <td th:text="${task.status}"></td>
+                            <th:block th:if="${not #sets.isEmpty(task.labels)}" th:each="label : ${task.labels}">
+                                <td style="text-align:center;"><span class="badge badge-primary"
+                                                                     th:text="${label.name}"></span></td>
+                            </th:block>
+                            <th:block th:unless="${not #sets.isEmpty(task.labels)}">
+                                <td></td>
+                            </th:block>
+
                             <td style="text-align: center; white-space: nowrap;">
                                 <a th:href="@{/serviceProvider/tasks/{taskId}/offers(taskId=${task.id})}"
                                    title="Make New Offer"
@@ -153,15 +162,13 @@
                                             <i class="fas fa-handshake"></i>
                                         </a>
                                         <a data-toggle="modal"
-                                           data-target="#Modal"
+                                           th:data-target="'#Modal-' + ${offer.id + '-' + offer.taskDto.id}"
                                            title="Delete Offer"
                                            class="btn btn-danger btn-circle btn-sm"
                                            th:classappend="${offer.status != 'OFFERED' ? 'd-none' : ''}">
                                             <i class="fas fa-trash"></i>
                                         </a>
-                                        <div class="modal fade" id="Modal" tabindex="-1" role="dialog"
-                                             aria-labelledby="exampleModalLabel"
-                                             aria-hidden="true">
+                                        <div class="modal fade" th:id="'Modal-' + ${offer.id + '-' + offer.taskDto.id}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                             <div class="modal-dialog modal-dialog-centered" role="document">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
@@ -208,8 +215,10 @@
                                 <div class="row no-gutters align-items-center">
                                     <div class="col-8">
                                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                            Accepted Offers</div>
-                                        <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${offerStatisticDto.totalAcceptedOffer}"> </div>
+                                            Accepted Offers
+                                        </div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800"
+                                             th:text="${offerStatisticDto.totalAcceptedOffer}"></div>
                                     </div>
                                     <div class="col-4 text-right">
                                         <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -226,8 +235,10 @@
                                 <div class="row no-gutters align-items-center">
                                     <div class="col-8">
                                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                            Pending Offers</div>
-                                        <div class="h5 mb-0 font-weight-bold text-gray-800"th:text="${offerStatisticDto.totalPendingOffer}"> </div>
+                                            Pending Offers
+                                        </div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800"
+                                             th:text="${offerStatisticDto.totalPendingOffer}"></div>
                                     </div>
                                     <div class="col-4 text-right">
                                         <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -244,8 +255,10 @@
                                 <div class="row no-gutters align-items-center">
                                     <div class="col-8">
                                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                            Rejected Offer</div>
-                                        <div class="h5 mb-0 font-weight-bold text-gray-800"th:text="${offerStatisticDto.totalRejectedOffer}"></div>
+                                            Rejected Offer
+                                        </div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800"
+                                             th:text="${offerStatisticDto.totalRejectedOffer}"></div>
                                     </div>
                                     <div class="col-4 text-right">
                                         <i class="fas fa-calendar fa-2x text-gray-300"></i>
