Added Label Management Functionality

--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -153,6 +153,24 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-lg-6">
+                        <!-- Collapsable Card Example -->
+                        <div class="card border-left-secondary shadow mt-4 mb-4">
+                            <!-- Card Header - Accordion -->
+                            <a class="d-block card-header py-3"
+                               role="button" aria-expanded="true" aria-controls="collapseCardExample">
+                                <h6 class="m-0 font-weight-bold text-primary">Labels</h6>
+                            </a>
+                            <!-- Card Content - Collapse -->
+                            <div class="collapse show">
+                                <div class="card-body">
+                                    <a th:href="@{/admin/labels}">View All Available Labels -></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
