Added Error Pages

--- a/src/main/resources/templates/500.html
+++ b/src/main/resources/templates/500.html
@@ -33,8 +33,8 @@
 
         <!-- 403 Error Text -->
         <div class="text-center mt-4">
-            <div class="error mx-auto" data-text="403">403</div>
-            <p class="lead text-gray-800 mb-5">Forbidden</p>
+            <div class="error mx-auto" data-text="500">500</div>
+            <p class="lead text-gray-800 mb-5">Internal Server Error</p>
             <p class="text-gray-500 mb-0">You do not have permission to access this resource.</p>
             <a href="javascript:window.history.back()">&larr; Back to Previous Page</a>
         </div>
