--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -33,9 +33,9 @@
 
         <!-- 403 Error Text -->
         <div class="text-center mt-4">
-            <div class="error mx-auto" data-text="403">403</div>
-            <p class="lead text-gray-800 mb-5">Forbidden</p>
-            <p class="text-gray-500 mb-0">You do not have permission to access this resource.</p>
+            <div class="error mx-auto" data-text="404">404</div>
+            <p class="lead text-gray-800 mb-5">The page you were looking for is not found!</p>
+            <p class="text-gray-500 mb-0">You may have mistyped the address or the page may have moved.</p>
             <a href="javascript:window.history.back()">&larr; Back to Previous Page</a>
         </div>
 
