limited budget to positive values

--- a/src/main/resources/templates/client-tasks-create.html
+++ b/src/main/resources/templates/client-tasks-create.html
@@ -108,6 +108,7 @@
               <label for="budget">Budget</label>
               <input type="number"
                      class="form-control"
+                     min="1"
                      id="budget"
                      th:field="*{budget}"
                      required="required"
