--- a/src/main/resources/templates/client-tasks-edit.html
+++ b/src/main/resources/templates/client-tasks-edit.html
@@ -111,6 +111,7 @@
                             <label for="budget">Budget</label>
                             <input type="number"
                                    class="form-control"
+                                   min="1"
                                    id="budget"
                                    th:field="*{budget}"
                                    required="required"
