--- a/src/main/resources/templates/register-serviceprovider.html
+++ b/src/main/resources/templates/register-serviceprovider.html
@@ -37,7 +37,7 @@
             <div class="text-center">
               <h1 class="h4 text-gray-900 mb-4">Create a Service Provider Account!</h1>
             </div>
-            <div th:if="${param.fail}" class="alert alert-success">
+            <div th:if="${param.fail}" class="alert alert-danger">
               Username or email already exists!</div>
             <form class="user" th:action="@{/register/save/serviceprovider}" th:object="${user}" method="post">
               <div class="form-group row">
@@ -59,7 +59,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <input type="text"
+                <input type="number"
                        class="form-control"
                        placeholder="Contact Number"
                        th:field="*{contactNumber}"
