--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -124,10 +124,9 @@
                         <!-- Collapsable Card Example -->
                         <div class="card border-left-secondary shadow mt-4 mb-4">
                             <!-- Card Header - Accordion -->
-                            <a href="#clientCountCard" class="d-block card-header py-3" data-toggle="collapse"
-                               role="button" aria-expanded="true" aria-controls="collapseCardExample">
+                            <div class="card-header py-3">
                                 <h6 class="m-0 font-weight-bold text-primary">Client Count</h6>
-                            </a>
+                            </div>
                             <!-- Card Content - Collapse -->
                             <div class="collapse show">
                                 <div class="card-body">
@@ -141,10 +140,9 @@
                         <!-- Collapsable Card Example -->
                         <div class="card border-left-secondary shadow mt-4 mb-4">
                             <!-- Card Header - Accordion -->
-                            <a href="#serviceProviderCountCard" class="d-block card-header py-3" data-toggle="collapse"
-                               role="button" aria-expanded="true" aria-controls="collapseCardExample">
+                            <div class="card-header py-3">
                                 <h6 class="m-0 font-weight-bold text-primary">Service Provider Count</h6>
-                            </a>
+                            </div>
                             <!-- Card Content - Collapse -->
                             <div class="collapse show">
                                 <div class="card-body">
@@ -154,22 +152,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6">
-                        <!-- Collapsable Card Example -->
-                        <div class="card border-left-secondary shadow mt-4 mb-4">
-                            <!-- Card Header - Accordion -->
-                            <a class="d-block card-header py-3"
-                               role="button" aria-expanded="true" aria-controls="collapseCardExample">
-                                <h6 class="m-0 font-weight-bold text-primary">Labels</h6>
-                            </a>
-                            <!-- Card Content - Collapse -->
-                            <div class="collapse show">
-                                <div class="card-body">
-                                    <a th:href="@{/admin/labels}">View All Available Labels -></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
 
                 </div>
             </div>
@@ -197,6 +180,23 @@
                         </div>
                     </div>
                 </div>
+
+
+                    <!-- Collapsable Card Example -->
+                <div class="card border-left-secondary shadow mt-4 mb-4">
+                        <!-- Card Header - Accordion -->
+
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">Labels</h6>
+                    </div>
+                        <!-- Card Content - Collapse -->
+                    <div class="collapse show">
+                        <div class="card-body">
+                            <a th:href="@{/admin/labels}">View All Available Labels -></a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
 
