--- a/src/main/resources/templates/admin-labels.html
+++ b/src/main/resources/templates/admin-labels.html
@@ -116,8 +116,8 @@
   </div>
 
   <!-- Page level custom scripts -->
-  <script type="text/javascript" th:src="@{/vendor/chart.js/Chart.min.js}" defer></script>
-  <script type="text/javascript" th:src="@{/js/chart-pie-admin.js}" defer></script>
+  <script type="text/javascript" th:src="@{/vendor/datatables/jquery.dataTables.min.js}" defer></script>
+  <script type="text/javascript" th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}" defer></script>
   <script type="text/javascript" th:src="@{/js/clientTaskScripts.js}" defer></script>
 
 </section>
