--- a/src/main/resources/templates/client-tasks-list.html
+++ b/src/main/resources/templates/client-tasks-list.html
@@ -114,7 +114,15 @@
                                 <td></td>
                             </th:block>
 
-                            <td th:text="${task.status}"></td>
+                            <td>
+                                <span th:text="${task.status}"
+                                      th:class="${task.status == 'COMPLETED' ? 'badge badge-success' :
+                                      (task.status == 'PENDING' ? 'badge badge-secondary' :
+                                      (task.status == 'CANCELLED' ? 'badge badge-danger' :
+                                      (task.status == 'ONGOING' ? 'badge badge-warning' : '')))}">
+                                </span>
+                            </td>
+
                             <td style="text-align: center; white-space: nowrap;">
                                 <a th:href="@{/client/tasks/{taskId}/offers(taskId=${task.id})}"
                                    title="View Offers"
