--- a/src/main/resources/templates/client-sp-list.html
+++ b/src/main/resources/templates/client-sp-list.html
@@ -84,8 +84,7 @@
           <table class="table table-bordered" id="serviceProvidersTable" STYLE="width='100%'; cellspacing='0'" >
             <thead>
             <tr>
-              <th>First Name</th>
-              <th>Last Name</th>
+              <th>Name</th>
               <th>Email</th>
               <th>Contact Number</th>
               <th>Business Name</th>
@@ -94,8 +93,7 @@
             </thead>
             <tbody >
             <tr th:each="serviceProvider :${serviceProviders}">
-              <td th:text="${serviceProvider.firstName}"></td>
-              <td th:text="${serviceProvider.lastName}"></td>
+              <td th:text="${serviceProvider.firstName} + ' ' + ${serviceProvider.lastName}"></td>
               <td th:text="${serviceProvider.email}"></td>
               <td th:text="${serviceProvider.contactNumber}"></td>
               <td th:text="${serviceProvider.businessName}"></td>
