--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -70,6 +70,18 @@
                 </button>
 
                 <!-- Topbar Search -->
+                <form
+                        class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                    <div class="input-group">
+                        <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
+                               aria-label="Search" aria-describedby="basic-addon2">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary" type="button">
+                                <i class="fas fa-search fa-sm"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
 
                 <!-- Topbar Navbar -->
                 <ul class="navbar-nav ml-auto">
@@ -136,13 +148,13 @@
         <!-- End of Main Content -->
 
         <!-- Footer -->
-<!--        <footer class="sticky-footer bg-white">-->
-<!--            <div class="container my-auto">-->
-<!--                <div class="copyright text-center my-auto">-->
-<!--                    <span>Copyright &copy; Errand 2023</span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </footer>-->
+        <footer class="sticky-footer bg-white">
+            <div class="container my-auto">
+                <div class="copyright text-center my-auto">
+                    <span>Copyright &copy; Errand 2023</span>
+                </div>
+            </div>
+        </footer>
         <!-- End of Footer -->
 
     </div>
